removed unnecessary image and language, also added heading

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,41 +1,20 @@
 <!-- Header -->
 <header>  
   <div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <div class="header_white_space"></div>
-        <section class="email_register text-left">
+    <div class="row">      
+      <div class="header_white_space"></div>
+      <section class="header_content">
+        <h1>increase, connect & support</h1>
+        <section class="email_register ">
           <form action="" class="form-inline">   
-            <label for="">Developer Register now for early access</label>       
+            <label for="">Developer Register now for early access</label> <br>      
             <div class="form-group">            
               <input type="text" class="form-control" placeholder="Enter your email address">
               <button type="submit" class="btn btn-default">Submit</button>
             </div>
           </form>
-        </section>
-      </div>
-      <div class="col-md-7">
-        <section class="text-left header-element">
-          <div class="mobile">
-            <%= image_tag ('showcase.png')%>
-          </div>
-          <div class="language">
-            <ul class="text-left list-unstyled">
-              <li>C++</li>
-              <li>java</li>
-              <li>pythan</li>
-              <li>ruby</li>
-              <li>php</li>
-              <li>mysql</li>
-              <li>c-sharp</li>
-              <li>c-objective</li>
-              <li>ajax</li>
-              <li>perl</li>
-              <li>javascript</li>
-            </ul>
-          </div>
-        </section>
-      </div>
+        </section>       
+      </section>
     </div>
   </div>
 </header>
