--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -47,9 +47,13 @@ a.navbar-brand
   width: 100%
   img
     width: 80%
-.email_register
+.email_register  
+  width: 58%
+  margin: 0 auto
+  text-align: left
   .form-control
     background-color: transparent    
+    display: inline-block
     width: 300px
     color: #fff
   .btn
@@ -57,6 +61,7 @@ a.navbar-brand
     background: #ff9900
     border: none
     color: #fff
+    margin-top: -4px
     &:hover
       background: #FED136
   .form-control, .btn  
@@ -65,7 +70,8 @@ a.navbar-brand
 
   label
     font-weight: normal
-    color: #000
+    color: #fff
+    text-align: left
 
 .team
   &_memeber
@@ -95,6 +101,19 @@ header
   .container
     position: relative
     top: 150px
+  .header_content
+    width: 60%
+    margin: 0 auto
+    text-align: center
+    h1
+      font-size: 65px
+      text-transform: uppercase
+      letter-spacing: -1px
+    h3 
+      font-size: 40px
+      color: #31BADA
+      letter-spacing: -2px
+      margin: 30px 0
   .header-element
     position: relative
     margin-top: 10px
