--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,15 +2,15 @@
 <header>  
   <div class="container">
     <div class="row">      
-      <div class="header_white_space"></div>
       <section class="header_content">
-        <h1>increase, connect & support</h1>
+        <h1>increase.<br> connect & support</h1>
+        <h3>What you will build</h3>
         <section class="email_register ">
-          <form action="" class="form-inline">   
-            <label for="">Developer Register now for early access</label> <br>      
-            <div class="form-group">            
+          <form action="" class="">
+            <div class="form-group">
+              <label for="">Developer Register now for early access</label><br>
               <input type="text" class="form-control" placeholder="Enter your email address">
-              <button type="submit" class="btn btn-default">Submit</button>
+              <button type="submit" class="btn btn-default">Submit</button>            
             </div>
           </form>
         </section>       
