Design implemention on presentation section and comunity section - added class hero on header to remove unnecessary positino and top space presentation section - split into two block content and video - used title, subtitle, article and tag on content - used youtube iframe to display video on vedio block Used seperation line after below the sections - to made seperation, fixed the width of line - used small scroll in middle of line NodeBome community section - used previous fontawesome icons and remove background colors - used thick border to display round circle - Used plus icon between two community block. - changes the content of all ommunity block.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -268,7 +268,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 
-header {  
+header.hero {  
   color: #fff;
   background-attachment: scroll;
   background-image: asset_url('header_bg.jpg');
@@ -278,8 +278,6 @@ header {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  position: relative;
-  top: -120px
 }
 
 header .intro-text {
