--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header>  
+<header class="hero">  
   <div class="container">
     <div class="row">      
       <section class="header_content">
@@ -18,7 +18,38 @@
     </div>
   </div>
 </header>
-    <!-- Team Section -->
+<!--End Header -->
+<!-- NodeBomb presention -->
+<div class="container">
+  <section class="presentation row">
+    <div class="col-md-6">
+      <header>
+        <h3>NODEBOMB PRESENTATION</h3>
+        <div class="sub_heading">
+          <span>Location <a href="#">asfas</a></span> | <span>Speaker <a href="#">Jhon Doe</a> </span> 
+        </div>
+      </header>
+      <article>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis. Donec gravida lacinia ligula, eu finibus elit. Aliquam ut turpis iaculis, suscipit nisl quis, dignissim metus.
+        </p>
+      </article>
+      <h2>Coders Units</h2>
+    </div>
+    <div class="col-md-6">
+      <div class="presentation_video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SkdrYWhh-8s" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </section> 
+</div>
+<!--End NodeBomb presention -->
+<!-- seperation line -->
+<section class="seperation">
+  <div class="line"></div>
+  <span></span>
+</section>
+<!--End seperation line -->
+<!-- Team Section -->
 <section id="team">
   <div class="container">
     <div class="row">
@@ -52,30 +83,45 @@
     </div>
   </div>
 </section>
-
-<section id="community" class="dark-grey">
+<!-- seperation line -->
+<section class="seperation">
+  <div class="line"></div>
+  <span></span>
+</section>
+<!--End seperation line -->
+<section id="community" >
   <div class="container">
     <div class="row community-row">
       <div class="col-lg-12 text-center">
         <h2 class="community-section-heading">Join the nodeBomb community in 1-2-3-4</h2>
       </div>
-      <div class="row">
-        <div class="col-sm-4 text-center">
+      <div class="row community_blocks">
+        <div class="col-sm-3 text-center">
           <div class="node-bomb-community">
-            <div class="community-btns suitcase"><!-- <i class="fa fa-suitcase "></i> --></div>
-            <p>Enhance the work profile quickly and increase job opportunities with well designed portfolio!</p>
+            <div class="community-btns "><i class="fa fa-suitcase "></i></div>
+            <span class="fa fa-plus"></span>
+            <p>Create a work portfolio!</p>
           </div>
         </div>
-        <div class="col-sm-4 text-center">
+
+        <div class="col-sm-3 text-center">
           <div class="node-bomb-community">
-            <div class="community-btns users"><!-- <i class="fa fa-users"></i> --></div>
-            <p>Connect with Developer across the entire globe!</p>
+            <div class="community-btns "><i class="fa fa-users "></i></div>
+            <span class="fa fa-plus"></span>
+            <p>Connect with Developers across the globe</p>
           </div>
         </div>
-        <div class="col-sm-4 text-center">
+        <div class="col-sm-3 text-center">
           <div class="node-bomb-community">
-            <div class="community-btns comments"><!-- <i class="fa fa-comments"></i> --></div>
-            <p>Search our endless of progamming Groups ask questions and code edits,quickly.</p>
+            <div class="community-btns "><i class="fa fa-comments"></i></div>
+            <span class="fa fa-plus"></span>
+            <p>Search and join Q&A Groups</p>
+          </div>
+        </div>
+        <div class="col-sm-3 text-center">
+          <div class="node-bomb-community">
+            <div class="community-btns "><i class="fa fa-usd"></i></div>          
+            <p>Startups connect with Investors</p>
           </div>
         </div>
         <!-- <div class="col-sm-3 text-center">
