used seperated line below nodebomb community section

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -89,6 +89,7 @@
   <span></span>
 </section>
 <!--End seperation line -->
+<!-- NodeBomb community -->
 <section id="community" >
   <div class="container">
     <div class="row community-row">
@@ -103,7 +104,6 @@
             <p>Create a work portfolio!</p>
           </div>
         </div>
-
         <div class="col-sm-3 text-center">
           <div class="node-bomb-community">
             <div class="community-btns "><i class="fa fa-users "></i></div>
@@ -124,21 +124,21 @@
             <p>Startups connect with Investors</p>
           </div>
         </div>
-        <!-- <div class="col-sm-3 text-center">
-          <div class="node-bomb-community">
-            <div class="community-btns dollor"><i class="fa fa-usd"></i></div>
-            <p>Startups Connect with investors</p>
-          </div>
-        </div> -->
       </div>
     </div>
   </div>
 </section>
+<!--End NodeBomb community -->
+<!-- seperation line -->
+<section class="seperation">
+  <div class="line"></div>
+  <span></span>
+</section>
+<!--End seperation line -->
 <section id="service">
   <div class="container">
     <div class="row text-center">
       <h2 class="service-heading">INCREASE.CONNECT & SUPPORT</h2>
     </div>
   </div>
-  
 </section>
