Added laptop and tablet below nodebom community - warp the section uing id showcase - used both laptop and tablet and gave white space to top and bottom - diplay the image in center

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -135,10 +135,11 @@
   <span></span>
 </section>
 <!--End seperation line -->
-<section id="service">
-  <div class="container">
-    <div class="row text-center">
-      <h2 class="service-heading">INCREASE.CONNECT & SUPPORT</h2>
-    </div>
+<!-- Showcace -->
+<section id="showcase">
+  <div class="container text-center">
+    <%= image_tag ('showcase.png')%>
   </div>
 </section>
+<!-- End Showcace -->
+
