--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -145,6 +145,8 @@ section
   margin: 50px 0
   .sub_heading
     margin: 10px 0
+    a
+      color: rgb(8, 132, 160)
   h3
     font-weight: bold
     margin-top: 30px
@@ -200,7 +202,7 @@ section
   line-height: 25px
   margin-top: 10px
   padding: 0 45px
-
+  color: #f90
 
 .community-row
   margin-left: -35px
