--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
       <header>
         <h3>NODEBOMB PRESENTATION</h3>
         <div class="sub_heading">
-          <span>Location <a href="#">asfas</a></span> | <span>Speaker <a href="#">Jhon Doe</a> </span> 
+          <span>Location <a href="#">New York City</a></span> | <span>Speaker <a href="#">Ben Orenstien</a> </span> 
         </div>
       </header>
       <article>
