--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,8 @@
-<%if params[:controller]=='home'  && params[:action]=='index'
-    add_class="home_logocontent"
-  else
-    add_class="inner_logocontent"
-  end 
-%>
 <!-- Navigation -->
 <nav class="navbar navbar-default main-navbar">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header page-scroll <%= add_class %> ">
+    <div class="navbar-header page-scroll">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -35,9 +29,9 @@
         <li>
           <a class="page-scroll" href="#" data-toggle="modal" data-target=".video-modal-lg">Video</a>
         </li>
-<!--         <li>
+        <li>
           <a class="page-scroll" href="/staff">Staff</a>
-        </li> -->
+        </li>
         <li>
           <a class="page-scroll" href="/contact">Contact</a>
         </li>
