--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -107,12 +107,12 @@ header.hero
     h1
       font-size: 65px
       text-transform: uppercase
-      letter-spacing: -1cpx
+      font-family: 'Century gothic'
     h3 
       font-size: 40px
       color: #31BADA
-      letter-spacing: -2px
       margin: 30px 0
+      font-family: 'Century gothic'
   .header-element
     position: relative
     margin-top: 10px
