correction spelling (CODERS UNITE)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis. Donec gravida lacinia ligula, eu finibus elit. Aliquam ut turpis iaculis, suscipit nisl quis, dignissim metus.
         </p>
       </article>
-      <h2>Coders Units</h2>
+      <h2>Coders Unite.</h2>
     </div>
     <div class="col-md-6">
       <div class="presentation_video">
