--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -6,6 +6,8 @@
 .home_logocontent
   a.navbar-brand p
     color: #fff
+.navbar > .container > .navbar-header > a.navbar-brand     
+  margin-left: -30px
 a.navbar-brand 
   display: block
   line-height: 34px
@@ -21,7 +23,8 @@ a.navbar-brand
   font-size: 40px
   position: relative
   top: 8px
-  color: #000  
+  color: #000
+  margin-left: -8px
 .nav > li > 
   padding: 10px 15px
   font-size: 14px
