display the community icon in center of circle

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -258,6 +258,7 @@ section
   height: 170px
   width: 170px
   border: 5px solid #000
+  line-height: 80px
   .fa
     color: #000
 .community_blocks
