Replace the new content of stories and images of bottom

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,23 +61,23 @@
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem1"></div>
-          <h4><span class="story-prsn-name">Eric</span>, USA</h4>
-          <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                      
+          <h4><span class="story-prsn-name"><strong>Eric</strong></span>, USA</h4>
+          <p> "I created a profile and, and just landed my dream job."</p>                      
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem2"></div>                        
-          <h4><span class="story-prsn-name">Amit</span>, Bangladesh</h4>
-          <p> Is eligible to submit for jobs on NodeBomb, he now has less competition for jobs & he no longer has to lower his rates to compete.</p>                       
+          <h4><span class="story-prsn-name"><strong>Amit</strong></span>, Bangladesh</h4>
+          <p>"Instantly my job opportunities because I'm competing against a smaller pool of developers"</p>                       
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem3"></div>
                                
-          <h4><span class="story-prsn-name">Pavel</span>, Canada</h4>
-          <p> A CS student in University. He uses NodeBomb's Group Forums to get fast and friendly code and programming questions answered.</p>                       
+          <h4><span class="story-prsn-name"><strong>Pavel</strong></span>, Canada</h4>
+          <p> "The Q&A Groups helped me fix a bug in my code"</p>                       
         </div>
       </div>
     </div>
