--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -191,7 +191,7 @@ section
   position: relative
   margin: 20px auto
   .line
-    border-bottom: 1px solid #ccc
+    border-bottom: 3px solid #ccc
   span
     padding: 10px
     background: #ccc
@@ -202,7 +202,7 @@ section
     margin: 0 auto
     z-index: 1
     position: relative
-    margin-top: -10px
+    margin-top: -11px
 #team
   padding-bottom: 60px
 .section-heading
@@ -221,6 +221,7 @@ section
   text-align: center
   font-size: 16px
   line-height: 24px
+  padding: 0 20px
 .team_images
   width: 280px
   height: 280px
@@ -235,6 +236,7 @@ section
   margin-top: 10px
   padding: 0 45px
   color: #f90
+  font-weight: bold
 
 .community-row
   margin-left: -35px
@@ -404,3 +406,5 @@ section
 
 #showcase
   margin: 60px auto
+  img
+    width: 100%
