--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -68,33 +68,24 @@ a.navbar-brand
   //   &:hover
   //     background: #FED136
   .btn
-    -moz-box-shadow: inset 0px 1px 0px 0px #fce2c1
-    -webkit-box-shadow: inset 0px 1px 0px 0px #fce2c1
-    box-shadow: inset 0px 1px 0px 0px #fce2c1
-    background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25) )
-    background: -moz-linear-gradient( center top, #ffc477 5%, #fb9e25 100% )
-    background-color: #ffc477
-    text-indent: 0
-    border: 1px solid #eeb44f
-    display: inline-block
-    color: #ffffff
-    font-family: Arial
-    font-size: 16px
-    font-weight: bold
-    font-style: normal
-    height: 40px
-    line-height: 20px
-    width: 100px
-    text-decoration: none
-    text-align: center
-    text-shadow: 1px 1px 0px #cc9f52
+    color: #fff
+    font-size: 15px
+    text-shadow: 0px -1px 0px rgba(89, 89, 89, 0.8)
+    -webkit-border-radius: 3px
+    -moz-border-radius: 3px
+    border-radius: 3px
+    background: rgb(255, 135, 15)
+    background: -moz-linear-gradient(90deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
+    background: -webkit-linear-gradient(90deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
+    background: -o-linear-gradient(90deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
+    background: -ms-linear-gradient(90deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
+    background: linear-gradient(0deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
+    -webkit-box-shadow: 0px 2px 1px rgba(47, 50, 50, 0.68)
+    -moz-box-shadow:    0px 2px 1px rgba(47, 50, 50, 0.68)
+    box-shadow:         0px 2px 1px rgba(47, 50, 50, 0.68)
+    padding: 8px 25px
     margin-top: -5px
-
-.btn:hover 
-  background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) )
-  background: -moz-linear-gradient( center top, #fb9e25 5%, #ffc477 100% )  
-  background-color: #fb9e25
-
+    border: none
 
   .form-control, .btn  
     height: 40px
