--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -128,9 +128,11 @@ header.hero
     margin: 0 auto
     text-align: center
     h1
-      font-size: 65px
+      font-size: 60px
       text-transform: uppercase
       font-family: 'Century gothic'
+      font-weight: bold
+      text-shadow: 2px 0px 5px #555
     h3 
       font-size: 40px
       color: #31BADA
