Changes design on presentation and community sections Presentation section - added background color and moved up - gave white space on top and bottom
Coummunity section
- gave background color black
- reduce the thickness of circle
- gave color with to all the content icons, text and circle
-

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,28 +20,30 @@
 </header>
 <!--End Header -->
 <!-- NodeBomb presention -->
-<div class="container">
-  <section class="presentation row">
-    <div class="col-md-6">
-      <header>
-        <h3>NODEBOMB PRESENTATION</h3>
-        <div class="sub_heading">
-          <span>Location <a href="#">New York City</a></span> | <span>Speaker <a href="#">Ben Orenstien</a> </span> 
-        </div>
-      </header>
-      <article>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis. Donec gravida lacinia ligula, eu finibus elit. Aliquam ut turpis iaculis, suscipit nisl quis, dignissim metus.
-        </p>
-      </article>
-      <h2>Coders Unite.</h2>
-    </div>
-    <div class="col-md-6">
-      <div class="presentation_video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/SkdrYWhh-8s" frameborder="0" allowfullscreen></iframe>
+<section class="presentation">
+  <div class="container">
+    <section class="row">
+      <div class="col-md-6">
+        <header>
+          <h3>NODEBOMB PRESENTATION</h3>
+          <div class="sub_heading">
+            <span>Location <a href="#">New York City</a></span> | <span>Speaker <a href="#">Ben Orenstien</a> </span> 
+          </div>
+        </header>
+        <article>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis. Donec gravida lacinia ligula, eu finibus elit. Aliquam ut turpis iaculis, suscipit nisl quis, dignissim metus.
+          </p>
+        </article>
+        <h2>Coders Unite.</h2>
       </div>
-    </div>
-  </section> 
-</div>
+      <div class="col-md-6">
+        <div class="presentation_video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/SkdrYWhh-8s" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </section> 
+  </div>
+</section>
 <!--End NodeBomb presention -->
 <!-- Team Section -->
 <section id="team">
