--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -167,7 +167,9 @@ section
 // Presentaiton
 
 .presentation
-  margin: 50px 0
+  margin: -80px 0 50px 0
+  background: #E4E6EF
+  padding: 40px 0
   .sub_heading
     margin: 10px 0
     a
@@ -228,8 +230,7 @@ section
   line-height: 25px
   margin-top: 10px
   padding: 0 45px
-  color: #f90
-  font-weight: bold
+  color: #fff
 
 .community-row
   margin-left: -35px
@@ -237,12 +238,14 @@ section
 
 #community
   padding: 30px 0px 50px
+  background: #333
 
 .community-section-heading
   margin-bottom: 40px
   text-transform: capitalize
   font-weight: normal
   font-size: 35px
+  color: #fff
 
 .community-btns
   font-size: 70px
@@ -252,10 +255,10 @@ section
   margin: 0 auto
   height: 170px
   width: 170px
-  border: 5px solid #000
+  border: 2px solid #fff
   line-height: 80px
   .fa
-    color: #000
+    color: #fff
 .community_blocks
   position: relative
 .node-bomb-community
