--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -206,6 +206,7 @@ section
   margin-bottom: 20px
   padding: 0 0 10px 0px
   text-transform: capitalize
+  font-family: 'texgyreadventor-bold'
 .story-prsn-name
   font-size: 25px
 .team_member
@@ -220,6 +221,7 @@ section
 .team_images
   width: 280px
   height: 280px
+  margin-bottom: 30px
 .dark-grey
   background-color: #DDD 
 
@@ -238,7 +240,7 @@ section
 
 #community
   padding: 30px 0px 50px
-  background: #333
+  background: #000
 
 .community-section-heading
   margin-bottom: 40px
@@ -246,6 +248,7 @@ section
   font-weight: normal
   font-size: 35px
   color: #fff
+  font-family: "texgyreadventor-bold"
 
 .community-btns
   font-size: 70px
@@ -262,11 +265,13 @@ section
 .community_blocks
   position: relative
 .node-bomb-community
+  margin-top: 30px
   span
     position: absolute
     right: -6px
-    top: 80px
+    top: 110px
     font-size: 20px
+    color: #f0f0f0
 
 .suitcase
   background-color: #01A33E
@@ -372,6 +377,7 @@ section
     margin-bottom: 0px
 #team h2.section-heading
   color: #000
+  margin-bottom: 35px
 
 .addressblock
   .fa
