--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -175,8 +175,7 @@ section
     a
       color: rgb(8, 132, 160)
   h3
-    font-weight: bold
-    margin-top: 30px
+    font-family: 'texgyreadventor-bold`'    
   h2
     text-transform: uppercase
 //section seperation
