Design changes on showcase section of bottom page - added heading of section - split content on two column - adjusted the images in column

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -175,7 +175,7 @@ section
     a
       color: rgb(8, 132, 160)
   h3
-    font-family: 'texgyreadventor-bold`'    
+    font-family: 'texgyreadventor-bold'    
   h2
     text-transform: uppercase
 //section seperation
@@ -409,3 +409,6 @@ section
   margin: 60px auto
   img
     width: 100%
+  h2
+    color: #000
+    margin-top: 75px
