--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,6 +19,7 @@
   </div>
 </header>
 <!--End Header -->
+
 <!-- NodeBomb presention -->
 <section class="presentation">
   <div class="container">
@@ -121,11 +122,14 @@
 </section>
 <!--End NodeBomb community -->
 
+
 <!-- Showcace -->
 <section id="showcase">
   <div class="container text-center">
-    <%= image_tag ('showcase.png')%>
+    <div class="col-md-7"><%= image_tag ('showcase.png')%></div>
+    <div class="col-md-2 col-md-offset-1 text-left"><h2 class="section-heading">Use NodeBomb on any device, easily.</h2></div>
+    
   </div>
+
 </section>
 <!-- End Showcace -->
-
