changes on email resgistration form - inceased the width of email resgistration form - inceased height and width of text field and submit button

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
     <section class="row">
       <div class="col-md-6">
         <header>
-          <h3>NODEBOMB PRESENTATION</h3>
+          <h2 class="section-heading">NodeBomb Presentation</h2>
           <div class="sub_heading">
             <span>Location <a href="#">New York City</a></span> | <span>Speaker <a href="#">Ben Orenstien</a> </span> 
           </div>
