--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -50,15 +50,15 @@ a.navbar-brand
   img
     width: 80%
 .email_register  
-  width: 58%
+  width: 74%
   margin: 0 auto
   text-align: left
   .form-control
     background-color: transparent    
     display: inline-block
-    width: 300px
+    width: 390px
     color: #fff
-    height: 40px
+    border-color: #fff
   // .btn
   //   width: 100px
   //   background: #ff9900
@@ -83,12 +83,12 @@ a.navbar-brand
     -webkit-box-shadow: 0px 2px 1px rgba(47, 50, 50, 0.68)
     -moz-box-shadow:    0px 2px 1px rgba(47, 50, 50, 0.68)
     box-shadow:         0px 2px 1px rgba(47, 50, 50, 0.68)
-    padding: 8px 25px
+    padding: 8px 35px
     margin-top: -5px
     border: none
 
   .form-control, .btn  
-    height: 40px
+    height: 50px
     // border-radius: 0
 
   label
@@ -169,15 +169,18 @@ section
 .presentation
   margin: -80px 0 50px 0
   background: #E4E6EF
-  padding: 40px 0
+  padding: 60px 0  
   .sub_heading
     margin: 10px 0
     a
       color: rgb(8, 132, 160)
   h3
     font-family: 'texgyreadventor-bold'    
-  h2
-    text-transform: uppercase
+  h2.section-heading
+    color: #000
+  article + h2
+    color: #000
+    padding-top: 70px
 //section seperation
 
 .seperation
