Changes on design of heading titles - gave border bottom on h1 heading - reduced font size and top spacing of h3 heading - gave white color on h3 heading

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -133,10 +133,12 @@ header.hero
       font-family: 'Century gothic'
       font-weight: bold
       text-shadow: 2px 0px 5px #555
+      border-bottom: 1px solid #fff
+      padding-bottom: 15px
     h3 
-      font-size: 40px
-      color: #31BADA
-      margin: 30px 0
+      font-size: 18px
+      color: #fff
+      margin: 5px 0 30px 0
       font-family: 'Century gothic'
   .header-element
     position: relative
