removed # symbol from subtitle of hader

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <div class="row">      
       <section class="header_content">
         <h1>increase.<br> connect & support</h1>
-        <h3>#Whatyouwillbuild</h3>
+        <h3>Whatyouwillbuild</h3>
         <section class="email_register ">
           <form action="" class="">
             <div class="form-group">
