fixed bug of submit button move down - gave input field width in percentage - use different width on class email_registration.

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -56,7 +56,7 @@ a.navbar-brand
   .form-control
     background-color: transparent    
     display: inline-block
-    width: 390px
+    width: 70%
     color: #fff
     border-color: #fff
   // .btn
@@ -417,3 +417,7 @@ section
   h2
     color: #000
     margin-top: 75px
+
+@media(max-width:768px) 
+  .email_register 
+    width: 95%
