--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -17,14 +17,16 @@ a.navbar-brand
     padding-left: 50px
     line-height: 18px
 .navbar-brand img
-  width: 40px
+  width: 38px
   display: inline-block
-.navbar-brand span  
-  font-size: 40px
+.navbar-brand > span  
+  font-size: 46px
   position: relative
-  top: 8px
+  top: 9px
   color: #000
   margin-left: -8px
+.navbar-brand span span
+  font-family: 'texgyreadventor-bold'  
 .nav > li > 
   padding: 10px 15px
   font-size: 14px
