Replaced comma(,) to pipline (|) between name and address on stories section - removed comma and wrap the address from span - gave white space right from name and left from address - gave left border from address

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -219,6 +219,11 @@ section
   padding: 0 20px
 .team_member h4
   line-height: 0.4
+.team_member h4 > span
+  padding-right: 5px
+.team_member h4 > span + span
+  border-left: 1px solid #000  
+  padding-left: 10px
 .team_member p
   text-align: center
   font-size: 16px
