--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,14 +58,14 @@
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem1"></div>
-          <h4><span class="story-prsn-name"><strong>Eric</strong></span>, USA</h4>
+          <h4><span class="story-prsn-name"><strong>Eric</strong></span> <span>USA</span></h4>
           <p> "I created a profile and, and just landed my dream job."</p>                      
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem2"></div>                        
-          <h4><span class="story-prsn-name"><strong>Amit</strong></span>, Bangladesh</h4>
+          <h4><span class="story-prsn-name"><strong>Amit</strong></span> <span>Bangladesh</span></h4>
           <p>"Instantly my job opportunities because I'm competing against a smaller pool of developers"</p>                       
         </div>
       </div>
@@ -73,7 +73,7 @@
         <div class="team_member text-center">
           <div class="team_images mem3"></div>
                                
-          <h4><span class="story-prsn-name"><strong>Pavel</strong></span>, Canada</h4>
+          <h4><span class="story-prsn-name"><strong>Pavel</strong></span> <span>Canada</span></h4>
           <p> "The Q&A Groups helped me fix a bug in my code"</p>                       
         </div>
       </div>
