--- a/app/views/home/deck.html.erb
+++ b/app/views/home/deck.html.erb
@@ -1,8 +1,7 @@
 <div class="heading-bg row">
   <div class="container">
-    <div class="col-lg-12 text-center">
-      <h2 class="section-heading">Staff</h2>
-      <h3 class="section-subheading text-muted">Together Everyone Achieves More.</h3>
+    <div class="row text-center">
+      <iframe width='100%' height='800' src='/Final_NodBomb.pdf' frameborder='0' allowfullscreen></iframe>
     </div>
   </div>
 </div>
