added slider on deck page - convert pdf particular page into png image - used bootstrap carousel slider for image slide - removed background image of slider navigation left and right

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -425,6 +425,14 @@ section
     color: #000
     margin-top: 75px
 
+.carousel-control.right,
+.carousel-control.left  
+  background-image: none
+
+#carousel-example-generic
+  padding: 50px
+.deck
+  background: #565454
 @media(max-width:768px) 
   .email_register 
     width: 95%
