--- a/app/views/home/deck.html.erb
+++ b/app/views/home/deck.html.erb
@@ -1,7 +1,36 @@
-<div class="heading-bg row">
+<div class="heading-bg deck row">
   <div class="container">
-    <div class="row text-center">
+    <!-- <div class="row text-center">
       <iframe width='100%' height='800' src='/Final_NodBomb.pdf' frameborder='0' allowfullscreen></iframe>
+    </div> -->
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <%  (2..12).each do |n|%>
+          <li data-target="#carousel-example-generic" data-slide-to="#{n}"></li>
+         <%end%>
+      </ol>
+      <!-- Wrapper for slides -->      
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <%=image_tag "deck-1.png"%>
+          </div>
+        <%  (2..12).each do |n|%>
+          <div class="item ">
+            <%=image_tag "deck-#{n}.png"%>
+          </div>
+        <%end%>
+        </div>
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
 </div>
