--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -126,7 +126,40 @@
 <!-- Showcace -->
 <section id="showcase">
   <div class="container text-center">
-    <div class="col-md-7"><%= image_tag ('showcase.png')%></div>
+    <div class="col-md-8">    
+      <!-- <div class="row text-center">
+        <iframe width='100%' height='800' src='/Final_NodBomb.pdf' frameborder='0' allowfullscreen></iframe>
+      </div> -->
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <%  (2..5).each do |n|%>
+            <li data-target="#carousel-example-generic" data-slide-to="#{n}"></li>
+           <%end%>
+        </ol>
+        <!-- Wrapper for slides -->      
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <%= image_tag ('showcase.png')%>
+            </div>
+          <%  (2..5).each do |n|%>
+            <div class="item ">
+              <%=image_tag "bslide#{n}.jpg"%>
+            </div>
+          <%end%>
+          </div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="fa fa-angle-left " aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="fa fa-angle-right " aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
     <div class="col-md-2 col-md-offset-1 text-left"><h2 class="section-heading">Use NodeBomb on any device, easily.</h2></div>
     
   </div>
