--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -17,8 +17,9 @@ a.navbar-brand
     padding-left: 50px
     line-height: 18px
 .navbar-brand img
-  width: 38px
+  width: 100%
   display: inline-block
+  margin: 20px 0px
 .navbar-brand > span  
   font-size: 46px
   position: relative
