--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand page-scroll" href="/">
-        <%=image_tag ("NodeBomb_logo.png") %> <span><span>Node</span>Bomb</span>
+        <%=image_tag ("logo.png") %><!--  <span><span>Node</span>Bomb</span> -->
       </a>
     </div>
 
