Add raleway fonts in font convert raleway ttf font into web fonts in font squirrel. give link to nodebomb site.
slicing the banner part
add new banner in marketing layout
add new logo in top of banner
change open san fonts into raleway and fixed the  banner typography.
increase the font size of register form.
change the submit btn bg-color and txt-color.
place the submit btn inside the form bar.
place the navigation in bottom of banner .
place banner nav-logo inside banner navigation bar.

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,6 +1,6 @@
 
 @font-face{ 
-  font-family: 'Raleway';
+  font-family: 'raleway-black';
   src: url(font-path('raleway-black-webfont.ttf'));
   src: url(font-path('raleway-black-webfont.eot')) format('embedded-opentype'),
        url(font-path('raleway-black-webfont.woff')) format('woff'),
@@ -8,7 +8,7 @@
        url(font-path('raleway-black-webfont.svg')) format('svg');
 }
 @font-face{ 
-  font-family: 'Raleway';
+  font-family: 'raleway-bold';
   src: url(font-path('raleway-bold-webfont.ttf'));
   src: url(font-path('raleway-bold-webfont.eot')) format('embedded-opentype'),
        url(font-path('raleway-bold-webfont.woff')) format('woff'),
@@ -17,7 +17,7 @@
 }
 
 @font-face{ 
-  font-family: 'Raleway';
+  font-family: 'raleway-bold-webfont';
   src: url(font-path('raleway-bold-webfont-webfont.ttf'));
   src: url(font-path('raleway-bold-webfont-webfont.eot')) format('embedded-opentype'),
        url(font-path('raleway-bold-webfont-webfont.woff')) format('woff'),
@@ -54,7 +54,7 @@
 
 
 @font-face{ 
-  font-family: 'raleway-light';
+  font-family: 'raleway-medium';
   src: url(font-path('raleway-medium-webfont.ttf'));
   src: url(font-path('raleway-medium-webfont.eot')) format('embedded-opentype'),
        url(font-path('raleway-medium-webfont.woff')) format('woff'),
@@ -63,7 +63,7 @@
 }
 
 @font-face{ 
-  font-family: 'raleway-light';
+  font-family: 'raleway-regular';
   src: url(font-path('raleway-regular-webfont.ttf'));
   src: url(font-path('raleway-regular-webfont.eot')) format('embedded-opentype'),
        url(font-path('raleway-regular-webfont.woff')) format('woff'),
