--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -6,6 +6,15 @@
 .home_logocontent
   a.navbar-brand p
     color: #fff
+#navigation
+  background-color: rgba(47, 166, 218, 0.81) !important
+  position: relative
+  bottom: 0px
+  top: 178px
+  width: 100%
+.banner-nav
+  img
+    margin: 0px !important
 .navbar > .container > .navbar-header > a.navbar-brand     
   margin-left: -30px
 a.navbar-brand 
@@ -54,14 +63,14 @@ a.navbar-brand
     width: 80%
 .email_register  
   width: 74%
-  margin: 0 auto
   text-align: left
   .form-control
-    background-color: transparent    
+    background-color: rgba(0, 0, 0, 0.48)   
     display: inline-block
     width: 70%
     color: #fff
     border-color: #fff
+    font-size: 19px
   // .btn
   //   width: 100px
   //   background: #ff9900
@@ -70,34 +79,37 @@ a.navbar-brand
   //   margin-top: -4px
   //   &:hover
   //     background: #FED136
+  .email-submit-btn
+    position: relative
+    left: -140px
+    box-shadow: none !important
+    height: 49px !important
+    border-bottom: 1px solid #fff !important
+    background-color: #FF5858
   .btn
     color: #fff
-    font-size: 15px
-    text-shadow: 0px -1px 0px rgba(89, 89, 89, 0.8)
+    font-size: 20px
     -webkit-border-radius: 3px
     -moz-border-radius: 3px
     border-radius: 3px
-    background: rgb(255, 135, 15)
-    background: -moz-linear-gradient(90deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
-    background: -webkit-linear-gradient(90deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
-    background: -o-linear-gradient(90deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
-    background: -ms-linear-gradient(90deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
-    background: linear-gradient(0deg, rgb(255, 135, 15) 30%, rgb(255, 167, 15) 78%)
-    -webkit-box-shadow: 0px 2px 1px rgba(47, 50, 50, 0.68)
-    -moz-box-shadow:    0px 2px 1px rgba(47, 50, 50, 0.68)
-    box-shadow:         0px 2px 1px rgba(47, 50, 50, 0.68)
     padding: 8px 35px
-    margin-top: -5px
+    margin-top: -8px
+    -webkit-margin-top: -5px
     border: none
+    font-weight: bold
 
   .form-control, .btn  
     height: 50px
     // border-radius: 0
-
+  
   label
-    font-weight: normal
+    font:
+      family: raleway-light
+      weight: normal
+      size: 30px
     color: #fff
     text-align: left
+    margin: 20px 0px
 
 .team
   &_memeber
@@ -119,30 +131,40 @@ a.navbar-brand
 
 
 header.hero
-  height: 660px
+  height: 650px
   position: relative
+  width: 100%
   section
     padding: 0
-  .container
+  .banner-margin-top
     position: relative
-    top: 150px
+    top: 120px
   .header_content
-    width: 60%
+    width: 100%
     margin: 0 auto
-    text-align: center
+    text-align: left
     h1
-      font-size: 60px
+      font-size: 55px
       text-transform: uppercase
-      font-family: 'Century gothic'
+      font-family: 'raleway-bold'
       font-weight: bold
-      text-shadow: 2px 0px 5px #555
-      border-bottom: 1px solid #fff
-      padding-bottom: 15px
+      line-height: 75px
+      span
+        font-size: 40px
+        font-family: 'raleway-regular'
+        font-weight: normal
     h3 
-      font-size: 18px
+      font-size: 25px
       color: #fff
-      margin: 5px 0 30px 0
-      font-family: 'Century gothic'
+      position: relative
+      top: -82px
+      left: -300px
+      font-family: 'raleway-regular'
+    .banner-txt
+      font-size: 20px
+      width: 60%
+      line-height: 30px
+      margin-top: -10px
   .header-element
     position: relative
     margin-top: 10px
