--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="hidden">
           <a href="#page-top"></a>
@@ -36,7 +36,7 @@
           <a class="page-scroll" href="/contact">Contact</a>
         </li>
       </ul>
-    </div>
+    </div> -->
     <!-- /.navbar-collapse -->
   </div>
   <!-- /.container-fluid -->
